--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 models/ยังไม่ยืนยัน 89372.crdownload
+models/vit_mediumd0.pt
+models/mobilenetv4_conv0.pt
+models/MobilenetV3_Large0.pt
+models/MobilenetV3_Large0.pt
